--- a/server/package.json
+++ b/server/package.json
@@ -17,6 +17,7 @@
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.3.5",
     "morgan": "^1.10.0",
+    "socket.io": "^4.5.1",
     "validator": "^13.7.0"
   },
   "devDependencies": {
